# starry_mosaic

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: mosaic_benchmark.rs
images/: README.md
images/polygonal_mosaic/: README.md
images/starry_mosaic/: README.md
src/: lib.rs  mosaic.rs  mosaic_builder.rs  polygonal_mosaic.rs  segment.rs  starry_mosaic.rs  transform.rs  utility.rs  vector.rs
src/coloring_method/: conic_gradient.rs  linear_gradient.rs  mod.rs  radial_gradient.rs
src/mosaic_shape/: grid.rs  helpers.rs  mod.rs  polygonal_star.rs  regular_polygon.rs  tilted_grid.rs
tests/: mosaic_creation.rs
