[package]
name = "starry_mosaic"
version = "0.2.0"
authors = ["Alexander Anishin <oneeyemaker@gmail.com>"]
license = "MIT"
description = "A library for generating colorful mosaic images with various geometrical patterns."
homepage = "https://github.com/OneEyeMaker/starry_mosaic"
repository = "https://github.com/OneEyeMaker/starry_mosaic"
readme = "README.md"
keywords = ["starry", "mosaic", "image"]
categories = ["graphics", "multimedia::images"]
edition = "2021"
exclude = ["/images/", "/tests/"]

[dependencies]
float-cmp = "0.9.0"
image = "0.24.3"
palette = "0.6.1"
robust = "0.2.3"
voronoice = "0.2.0"

[dev-dependencies]
rstest = "0.15.0"
rstest_reuse = "0.4.0"

[features]
mosaic_with_preset_coloring = []
